# cross-content-recommendation-system

./: .env.example  .gitignore  README.md  S3_SETUP.md  SPRINT2_DEBUG_PLAN.md  SPRINT2_SUMMARY.txt  SPRINT3_IMPLEMENTATION_PLAN.md  debug_evaluation.py  main.py  pyproject.toml  quick_fix_evaluation.py  requirements.txt  run_sprint2.sh  streamlit_app.py  verify_sprint2.py
.streamlit/: config.toml  secrets.toml.example
app/: main.py  main_s3.py
notebooks/archive/: descriptions.ipynb  genreSimilarity.ipynb  genres.ipynb  getDescription.ipynb  preprocessing.ipynb
scripts/: upload_to_hf.py
src/: descriptions.ipynb  genreSimilarity.ipynb  genres.ipynb  goodreads_genres_freq  imdb_genres_freq  imdb_preprocessed  main.py  preprocessing.ipynb  project_config.py
src/config/: title_type_mapping.yaml
src/data/: contrastive_dataset.py  data_validation.py  genre_mapper.py
src/evaluation/: final_evaluation.py  metrics.py
src/models/: baseline_recommender.py  contrastive_recommender.py  embedding_generator.py  faiss_indexer.py  projection_head.py
src/utils/: download_data.py  helpers.py  hf_data_loader.py  s3_data_loader.py  upload_to_s3.py
