[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cross-content-recommender"
version = "0.1.0"
requires-python = ">=3.10"

# src/ is the package root so that:
#   from models.contrastive_recommender import ...
#   from utils.hf_data_loader import ...
#   import project_config
# all work without any sys.path manipulation after `pip install -e .`
[tool.setuptools]
py-modules = ["project_config"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
